chemistry issue fixes -- table breaking inside, key term spacing

--- a/css/ccap-chemistry.css
+++ b/css/ccap-chemistry.css
@@ -2391,10 +2391,10 @@ div.book div.chapter > div.section div.example div.exercise .problem .figure .ti
 .table {
   page-break-inside: avoid;
   margin: auto;
-  page-break-inside: auto;
   prince-caption-page: all;
   padding-top: 1em;
   border: none !important;
+  page-break-inside: auto;
 }
 .table caption {
   font-family: Liberation Sans, sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
@@ -3680,10 +3680,10 @@ span.emphasis-leading-indent strong {
 .table table {
   page-break-inside: avoid;
   margin: auto;
-  page-break-inside: auto;
   prince-caption-page: all;
   padding-top: 1em;
   border: none !important;
+  page-break-inside: auto;
 }
 .table table .table-caption.caption {
   color: #000000;
@@ -3815,10 +3815,10 @@ div.colophon.end-of-book-solutions .chapter-area div.solution {
   content: " ";
 }
 .glossary dl dt {
-  margin-bottom: -0.5em;
+  margin-bottom: -3px;
 }
 .glossary dl dd {
-  margin-bottom: -0.5em;
+  margin-bottom: -3px;
 }
 div.book {
   /* --------------------------------------
