--- a/css/refactor/chemistry-slots.less
+++ b/css/refactor/chemistry-slots.less
@@ -113,7 +113,6 @@
           display: none;
         }
       }
-
     }
   }
   #module {
@@ -354,6 +353,7 @@
     .style(any; any) {
       padding-top: 1em;
       border: none !important; // override inline table style=""
+      #utils>#pb>.inside(auto);
     }
     .style(any; preface) {
       margin: 0;
@@ -472,8 +472,8 @@
     }
     .dl(any; chapter) {}
     .divider(any; chapter) {}
-    .term(any; chapter) { margin-bottom: -0.5em; }
-    .definition(any; chapter) { margin-bottom: -0.5em; }
+    .term(any; chapter) { margin-bottom: -3px; }
+    .definition(any; chapter) { margin-bottom: -3px; }
 
   }
   #figure {
